...
                android:textSize="16sp"
                tools:text="Ref: 20180907_FRefLK8+ (d:100)" />

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabEditCalibration"
            style="@style/floating_action_button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/layoutTitleBar"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/edit_calibration_details"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/textCalibrationError"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/calibrationList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layoutButtons"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/item_calibration" />

...
